# ocaml_fullstack

./: .gitignore  app.opam.locked  dune-project  ocaml_fullstack.opam  ocaml_fullstack.opam.locked  package.json  webpack.config.js
client/: client.ml  dune
client/static/: index.html
common/: common.ml  dune
server/: dune  server.ml
